Randomização dos tipos de vinhos mais comprados pelo cliente agora leva em consideração quando o cliente tem mais de um tipo com a mesma quantidade.